# Author: Lucas Vilas-Boas
# Year: 2025
# Repo: https://github.com/lucoiso/luvk_example

# ----------- Global Definitions -----------
SET(LIBRARY_NAME LuVK_Example)

CMAKE_MINIMUM_REQUIRED(VERSION 3.28)
PROJECT(${LIBRARY_NAME} VERSION 0.0.1 LANGUAGES C CXX)

IF (POLICY CMP0048)
    CMAKE_POLICY(SET CMP0048 NEW)
ENDIF ()

SET(CMAKE_CXX_STANDARD 23)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_EXTENSIONS OFF)
SET(CMAKE_CXX_SCAN_FOR_MODULES OFF)

SET(CMAKE_BINARY_DIR ${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE})
SET(CMAKE_INSTALL_PREFIX ${CMAKE_BINARY_DIR})

SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

SET(CMAKE_DEBUG_POSTFIX "d")
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/lib)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/lib)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/bin)

SET(CMAKE_RELEASE_POSTFIX "")
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/lib)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/lib)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/bin)

SET(CMAKE_INSTALL_LIBDIR ${CMAKE_BINARY_DIR}/lib)
SET(CMAKE_INSTALL_BINDIR ${CMAKE_BINARY_DIR}/bin)

# ------------- Library Setup --------------
SET(LUVK_EXAMPLE_SOURCE_BASE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/src)
SET(LUVK_EXAMPLE_INCLUDE_BASE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/)

FILE(GLOB_RECURSE SOURCE_FILES CONFIGURE_DEPENDS "${LUVK_EXAMPLE_SOURCE_BASE_DIRECTORY}/*.cpp")
FILE(GLOB_RECURSE HEADER_FILES CONFIGURE_DEPENDS "${LUVK_EXAMPLE_INCLUDE_BASE_DIRECTORY}/luvk_example/**/*.hpp")

ADD_EXECUTABLE(${LIBRARY_NAME} ${SOURCE_FILES})

SET_TARGET_PROPERTIES(${ARG_TARGET} PROPERTIES
                      LINKER_LANGUAGE CXX
                      MACOSX_BUNDLE_GUI_IDENTIFIER com.example.${ARG_TARGET}
                      MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
                      MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
                      MACOSX_BUNDLE TRUE
                      WIN32_EXECUTABLE TRUE
)

TARGET_INCLUDE_DIRECTORIES(${LIBRARY_NAME} PRIVATE ${LUVK_EXAMPLE_SOURCE_BASE_DIRECTORY})
TARGET_INCLUDE_DIRECTORIES(${LIBRARY_NAME} PUBLIC ${LUVK_EXAMPLE_INCLUDE_BASE_DIRECTORY})

IF (DEFINED ENV{VULKAN_SDK})
    LIST(APPEND CMAKE_PREFIX_PATH $ENV{VULKAN_SDK}/cmake)
ENDIF()

FIND_PACKAGE(SDL3 CONFIG REQUIRED)
TARGET_INCLUDE_DIRECTORIES(${LIBRARY_NAME} PRIVATE ${SDL3_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(${LIBRARY_NAME} PRIVATE ${SDL3_LIBRARIES})

ADD_SUBDIRECTORY(luvk)
TARGET_LINK_LIBRARIES(${LIBRARY_NAME} PRIVATE luvk)

INCLUDE(FetchContent)

FETCHCONTENT_DECLARE(imgui
        GIT_REPOSITORY https://github.com/ocornut/imgui.git
        GIT_TAG v1.92.1-docking
)

FETCHCONTENT_MAKEAVAILABLE(imgui)

TARGET_SOURCES(${LIBRARY_NAME} PRIVATE
        ${imgui_SOURCE_DIR}/imgui.cpp
        ${imgui_SOURCE_DIR}/imgui_draw.cpp
        ${imgui_SOURCE_DIR}/imgui_demo.cpp
        ${imgui_SOURCE_DIR}/imgui_tables.cpp
        ${imgui_SOURCE_DIR}/imgui_widgets.cpp
)

TARGET_INCLUDE_DIRECTORIES(${LIBRARY_NAME} PUBLIC ${imgui_SOURCE_DIR})
INSTALL(FILES $<TARGET_RUNTIME_DLLS:${LIBRARY_NAME}> TYPE BIN)
