# Author: Lucas Vilas-Boas
# Year: 2025
# Repo: https://github.com/lucoiso/luvk_example

SET(LIBRARY_NAME LuVK_Example)

CMAKE_MINIMUM_REQUIRED(VERSION 3.28)
PROJECT(${LIBRARY_NAME} VERSION 0.0.1 LANGUAGES C CXX)

IF (POLICY CMP0048)
    CMAKE_POLICY(SET CMP0048 NEW)
ENDIF ()

SET(CMAKE_CXX_STANDARD 23)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_EXTENSIONS OFF)
SET(CMAKE_CXX_SCAN_FOR_MODULES OFF)

SET(CMAKE_BINARY_DIR ${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE})
SET(CMAKE_INSTALL_PREFIX ${CMAKE_BINARY_DIR})

SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

SET(CMAKE_DEBUG_POSTFIX "d")
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/lib)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/lib)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/bin)

SET(CMAKE_RELEASE_POSTFIX "")
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/lib)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/lib)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/bin)

SET(CMAKE_INSTALL_LIBDIR ${CMAKE_BINARY_DIR}/lib)
SET(CMAKE_INSTALL_BINDIR ${CMAKE_BINARY_DIR}/bin)

SET(LUVK_EXAMPLE_SOURCE_BASE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/src)
SET(LUVK_EXAMPLE_INCLUDE_BASE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/)

FILE(GLOB_RECURSE SOURCE_FILES CONFIGURE_DEPENDS "${LUVK_EXAMPLE_SOURCE_BASE_DIRECTORY}/*.cpp")
FILE(GLOB_RECURSE HEADER_FILES CONFIGURE_DEPENDS "${LUVK_EXAMPLE_INCLUDE_BASE_DIRECTORY}/luvk_example/**/*.hpp")

ADD_EXECUTABLE(${LIBRARY_NAME} ${SOURCE_FILES})

TARGET_INCLUDE_DIRECTORIES(${LIBRARY_NAME} PRIVATE ${LUVK_EXAMPLE_SOURCE_BASE_DIRECTORY})
TARGET_INCLUDE_DIRECTORIES(${LIBRARY_NAME} PUBLIC ${LUVK_EXAMPLE_INCLUDE_BASE_DIRECTORY})

ADD_SUBDIRECTORY(luvk)
TARGET_LINK_LIBRARIES(${LIBRARY_NAME} PUBLIC luvk)

INCLUDE(FetchContent)

SET(SDL_SHARED ON CACHE BOOL "" FORCE)
SET(SDL_STATIC OFF CACHE BOOL "" FORCE)
SET(SDL_TESTS OFF CACHE BOOL "" FORCE)
SET(SDL_EXAMPLES OFF CACHE BOOL "" FORCE)
SET(SDL_DISABLE_INSTALL OFF CACHE BOOL "" FORCE)
SET(SDL_DISABLE_INSTALL_DOCS OFF CACHE BOOL "" FORCE)
SET(SDL_INSTALL_TESTS OFF CACHE BOOL "" FORCE)

SET(SDL_VIDEO ON CACHE BOOL "" FORCE)
SET(SDL_VULKAN ON CACHE BOOL "" FORCE)
SET(SDL_DIRECTX OFF CACHE BOOL "" FORCE)
SET(SDL_OPENGLES OFF CACHE BOOL "" FORCE)

SET(SDL_AUDIO OFF CACHE BOOL "" FORCE)
SET(SDL_GPU OFF CACHE BOOL "" FORCE)
SET(SDL_RENDER OFF CACHE BOOL "" FORCE)
SET(SDL_CAMERA OFF CACHE BOOL "" FORCE)
SET(SDL_JOYSTICK OFF CACHE BOOL "" FORCE)
SET(SDL_HAPTIC OFF CACHE BOOL "" FORCE)
SET(SDL_HIDAPI OFF CACHE BOOL "" FORCE)
SET(SDL_POWER OFF CACHE BOOL "" FORCE)
SET(SDL_SENSOR OFF CACHE BOOL "" FORCE)
SET(SDL_DIALOG OFF CACHE BOOL "" FORCE)

FETCHCONTENT_DECLARE(sdl3
                     GIT_REPOSITORY https://github.com/libsdl-org/SDL.git
                     GIT_TAG release-3.2.28
)
FETCHCONTENT_MAKEAVAILABLE(sdl3)

TARGET_INCLUDE_DIRECTORIES(${LIBRARY_NAME} PUBLIC ${sdl3_SOURCE_DIR}/include)

SET(GLM_BUILD_TESTS OFF CACHE BOOL "" FORCE)
SET(GLM_BUILD_INSTALL OFF CACHE BOOL "" FORCE)
SET(GLM_BUILD_LIBRARY OFF CACHE BOOL "" FORCE)
SET(GLM_ENABLE_CXX_17 OFF CACHE BOOL "" FORCE)
SET(GLM_ENABLE_CXX_20 ON CACHE BOOL "" FORCE)
SET(GLM_ENABLE_SIMD_SSE2 ON CACHE BOOL "" FORCE)
SET(GLM_ENABLE_SIMD_SSE3 ON CACHE BOOL "" FORCE)
SET(GLM_ENABLE_SIMD_SSSE3 ON CACHE BOOL "" FORCE)
SET(GLM_ENABLE_SIMD_SSE4_1 ON CACHE BOOL "" FORCE)
SET(GLM_ENABLE_SIMD_SSE4_2 ON CACHE BOOL "" FORCE)
SET(GLM_ENABLE_SIMD_AVX ON CACHE BOOL "" FORCE)
SET(GLM_ENABLE_SIMD_AVX2 ON CACHE BOOL "" FORCE)
SET(GLM_ENABLE_SIMD_NEON ON CACHE BOOL "" FORCE)
SET(GLM_FORCE_PURE OFF CACHE BOOL "" FORCE)

FETCHCONTENT_DECLARE(glm
                     GIT_REPOSITORY https://github.com/g-truc/glm.git
                     GIT_TAG 1.0.2
)
FETCHCONTENT_MAKEAVAILABLE(glm)

TARGET_INCLUDE_DIRECTORIES(${LIBRARY_NAME} PUBLIC ${glm_SOURCE_DIR})

FETCHCONTENT_DECLARE(imgui
                     GIT_REPOSITORY https://github.com/ocornut/imgui.git
                     GIT_TAG v1.92.5-docking
)
FETCHCONTENT_MAKEAVAILABLE(imgui)

TARGET_SOURCES(${LIBRARY_NAME} PRIVATE
               ${imgui_SOURCE_DIR}/imgui.cpp
               ${imgui_SOURCE_DIR}/imgui_draw.cpp
               ${imgui_SOURCE_DIR}/imgui_demo.cpp
               ${imgui_SOURCE_DIR}/imgui_tables.cpp
               ${imgui_SOURCE_DIR}/imgui_widgets.cpp
)

TARGET_INCLUDE_DIRECTORIES(${LIBRARY_NAME} PUBLIC ${imgui_SOURCE_DIR})
TARGET_LINK_LIBRARIES(${LIBRARY_NAME} PUBLIC SDL3::SDL3 glm::glm)

INSTALL(FILES $<TARGET_RUNTIME_DLLS:${LIBRARY_NAME}> TYPE BIN)