# Author: Lucas Vilas-Boas
# Year: 2025
# Repo: https://github.com/lucoiso/luvk_example

# Options
SET(LUVK_INCLUDE_SLANG_COMPILER ON CACHE BOOL "" FORCE)

# Sub-Directories
ADD_SUBDIRECTORY(CMake)
ADD_SUBDIRECTORY(luvk)
ADD_SUBDIRECTORY(Core)
ADD_SUBDIRECTORY(UserInterface)
ADD_SUBDIRECTORY(Main)

# Optimizations
ENABLE_GLOBAL_RELEASE_PERFORMANCE()
ENABLE_TARGET_RELEASE_PERFORMANCE(luvk)
ENABLE_TARGET_RELEASE_PERFORMANCE(Core)
ENABLE_TARGET_RELEASE_PERFORMANCE(UserInterface)
ENABLE_TARGET_RELEASE_PERFORMANCE(${PROJECT_NAME})