# Author: Lucas Vilas-Boas
# Year: 2025
# Repo: https://github.com/lucoiso/luvk_example

SET(LIBRARY_NAME ${PROJECT_NAME})

ADD_EXECUTABLE(${LIBRARY_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/Main.cpp)

SET_TARGET_PROPERTIES(${LIBRARY_NAME} PROPERTIES
                      LINKER_LANGUAGE CXX
                      MACOSX_BUNDLE_GUI_IDENTIFIER com.example.${LIBRARY_NAME}
                      MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
                      MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
                      MACOSX_BUNDLE TRUE
                      WIN32_EXECUTABLE TRUE
)

TARGET_LINK_LIBRARIES(${LIBRARY_NAME} PRIVATE UserInterface)

INSTALL(TARGETS ${LIBRARY_NAME}
        BUNDLE  DESTINATION .
        RUNTIME DESTINATION bin
        LIBRARY DESTINATION lib
        ARCHIVE DESTINATION lib
)